<resources>

    <string name="friends">Memedom</string>
    <string name="dating">Dating</string>

    <string name="app_name">MemeDom</string>
    <string name="tab_profile">Profile</string>
    <string name="tab_home">Home</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_messages">Messages</string>
    <string name="home_signup">Signup</string>
    <string name="home_login">Login</string>
    <string name="credential_email">Email</string>
    <string name="credential_phone">Number</string>
    <string name="credential_view_icon">Credential View Icon</string>
    <string name="icon_in_credential">Icon in Credential</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Name/Nickname</string>
    <string name="hint_birthday">Birthday</string>
    <string name="next">Next</string>

    <string name="facebook_app_id">358457825283050</string>
    <string name="fb_login_protocol_scheme">fb358457825283050</string>
    <string name="icon_for_username">Icon for username</string>
    <string name="icon_for_email">Icon for email</string>
    <string name="icon_for_password">Icon for password</string>

    <string name="alert_ok">Ok</string>
    <string name="postTitle">Post Title</string>
    <string name="postComment">Write a comment</string>
    <string name="postReply">Reply</string>
    <string name="postButton">Post Meme</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="freeMeme">Popular</string>
    <string name="memedom">Memedom</string>
    <string name="matched">Matched</string>

    <string-array name="feed_segments">
        <item>Connections</item>
        <item>Popular</item>
        <item>Fresh</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_shares">10</string>
    <string name="reporting_resource">TODO</string>
    <string name="my_gender">My Gender</string>

</resources>