<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <View
        android:id="@+id/authentication_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/authentication_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:divider="@drawable/divider_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/next_authentication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/email_imageview"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/icon_for_email"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/email_password"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/icon_for_password"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/username_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:divider="@drawable/divider_vertical"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/next_authentication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/username_imageview"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/icon_for_username"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_username"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_authentication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        android:background="@drawable/softbuttons"
        app:layout_constraintBottom_toBottomOf="@+id/authentication_view"
        app:layout_constraintEnd_toEndOf="@+id/authentication_view"
        app:layout_constraintStart_toStartOf="@+id/authentication_view"
        app:layout_constraintTop_toTopOf="@+id/authentication_view" />

    <include layout="@layout/include_progress_overlay"/>

</androidx.constraintlayout.widget.ConstraintLayout>