<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBGColor"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layoutLoginAuth"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider_vertical_long"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:showDividers="middle"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/imageviewLoginEmail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/icon_for_email"
                app:srcCompat="@drawable/ic_action_email"
                app:tint="@color/appFGColor" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/defaultTextEdit"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/whiteColor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_vertical_long"
            android:orientation="horizontal"
            android:showDividers="middle">

            <ImageView
                android:id="@+id/imageviewLoginPassword"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:contentDescription="@string/icon_for_password"
                app:srcCompat="@drawable/ic_action_password"
                app:tint="@color/appFGColor" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:theme="@style/defaultTextEdit"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/whiteColor" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonNextLoginAuth"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/soft_button"
            android:gravity="center"
            android:text="@string/next"
            app:layout_constraintTop_toTopOf="@+id/authentication_view"
            tools:layout_editor_absoluteX="307dp" />

    </LinearLayout>


    <include
        android:id="@+id/includeProgressOverlay"
        layout="@layout/include_progress_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/layoutLoginAuth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_memedom" />

</androidx.constraintlayout.widget.ConstraintLayout>