<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/linearRadios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/memedomSegment"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/memedom"
                android:textColor="@color/appFGColor" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/matchSegment"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/radio_button_selector"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:text="@string/matched"
                android:textColor="@color/appFGColor" />
        </RadioGroup>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/homeSwipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearRadios">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearRadios"
            tools:listitem="@layout/feed_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/credentialViewHome"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="#99000000"
        android:baselineAligned="false"
        android:divider="@drawable/divider_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="@+id/homeSwipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginHomeButton"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/soft_button"
            android:backgroundTint="@color/whiteColor"
            android:elevation="10dp"
            android:text="@string/home_login"
            android:textAllCaps="false"
            android:textColor="@color/appFGColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signupHomeButton"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:background="@drawable/soft_button"
            android:backgroundTint="@color/appFGColor"
            android:elevation="20dp"
            android:text="@string/home_signup"
            android:textAllCaps="false"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <include
        android:id="@+id/includeProgressOverlay"
        layout="@layout/include_progress_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>